* 16-09-2018: v0.2.3 Initial Release
* 22-11-2018: v0.2.5 Addition of flowchart utils and more options for package loading and startup() function. Removed XML as dependency and fixed a few bugs.
* 06-09-2019: v0.2.7 Added badge, table and package import analysis and improved package loading. Deprecated standard package loading to prevent unnecessary loading. Fixed some bugs.
* 30-03-2022: v0.2.11 Added progression calculator and fixed some bugs.
* 17-11-2024: v0.2.13 Small bug fixes to resolve CRAN notes.