@@ -1,7 +1,7 @@
 Package: hgutils
 Title: Collection of Utility Functions
-Version: 0.2.13
-Date: 2024-11-17
+Version: 0.2.19
+Date: 2025-06-02
 Authors@R: person("H.G.", "van den Boorn", , "hvdboorn@gmail.com", role = c("aut", "cre"))
 Description: 
     A handy collection of utility functions designed to aid in
@@ -16,16 +16,16 @@ Description:
 License: GPL-3
 URL: https://github.com/hvdboorn/hgutils
 BugReports: https://github.com/hvdboorn/hgutils/issues
-Depends: R (>= 3.4.0)
-Imports: crayon, dplyr, grDevices, limSolve, lubridate, magrittr,
-        methods, stats, stringr, utils
+Depends: R (>= 4.4.0)
+Imports: crayon, dplyr, grDevices, lubridate, magrittr, methods, stats,
+        stringr, utils
 Suggests: testthat
 Encoding: UTF-8
 Language: en-GB
 RoxygenNote: 7.3.2
 NeedsCompilation: no
-Packaged: 2024-11-17 14:11:25 UTC; Windows
+Packaged: 2025-06-02 19:53:48 UTC; Windows
 Author: H.G. van den Boorn [aut, cre]
 Maintainer: H.G. van den Boorn <hvdboorn@gmail.com>
 Repository: CRAN
-Date/Publication: 2024-11-17 14:20:02 UTC
+Date/Publication: 2025-06-02 21:20:02 UTC
