@@ -47,7 +47,6 @@ export(rm_empty_rows)
 export(rm_na)
 export(rnd_dbl)
 export(sep_thousands)
-export(separate_values)
 export(spinner)
 export(startup)
 export(stfu)
@@ -73,7 +72,6 @@ importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(grDevices,dev.list)
 importFrom(grDevices,graphics.off)
-importFrom(limSolve,lsei)
 importFrom(lubridate,hour)
 importFrom(lubridate,minute)
 importFrom(lubridate,second)
